--- a/locale/fr.po
+++ b/locale/fr.po
@@ -3670,7 +3670,7 @@ msgstr "Fin de la pist&e"
 
 #: src/Menus.cpp
 msgid "Cursor to Prev Clip Boundary"
-msgstr "Curseur à la limite précédente du clip"
+msgstr "Curseur à la limite du clip précédent"
 
 # trebmuh to check (accélérateur)
 #: src/Menus.cpp
@@ -3679,7 +3679,7 @@ msgstr "Délimitati&ons du clip précédent"
 
 #: src/Menus.cpp
 msgid "Cursor to Next Clip Boundary"
-msgstr "Curseur à la prochaine limite du clip"
+msgstr "Curseur à la limite du clip suivant"
 
 # trebmuh to check (accélérateur)
 #: src/Menus.cpp
