Update French translation against the latest fix

--- a/locale/fr.po
+++ b/locale/fr.po
@@ -19,7 +19,7 @@ msgstr ""
 "Project-Id-Version: Audacity\n"
 "Report-Msgid-Bugs-To: audacity-translation@lists.sourceforge.net\n"
 "POT-Creation-Date: 2018-08-31 22:53+0100\n"
-"PO-Revision-Date: 2018-08-31 14:08+0100\n"
+"PO-Revision-Date: 2018-09-01 01:15+0100\n"
 "Last-Translator: Olivier Humbert (trebmuh/olinuxx) <trebmuh@tuxfamily.org>\n"
 "Language-Team: French\n"
 "Language: fr\n"
@@ -17877,9 +17877,8 @@ msgid "Rhythm track duration"
 msgstr "Durée de la piste de rythme"
 
 #: plug-ins/rhythmtrack.ny
-#, fuzzy
 msgid "Used if 'Number of bars' = 0"
-msgstr "Nombre de mesures"
+msgstr "Utilisé si 'Nombre de mesures' = 0"
 
 #: plug-ins/rhythmtrack.ny
 msgid "Start time offset"
