README and CHANGELOG for 2.3.0

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,64 @@
 List of significant changes and bug fixes going back to version 1.1.0
 
+
+Changes in version 2.2.2:
+
+Improvements
+
+    * Dropout detection
+      Dropout detection is controlled from a setting in Recording Preferences 
+      called "Detect dropouts".
+      When this setting is "on" (default setting) Audacity will detect dropouts 
+      (brief gaps in the recording) and will insert zeroes into the recording 
+      to keep the other good parts synchronized. These silent spans will make 
+      the dropouts more obvious, but keep the duration of the recording correct.
+      When recording stops, a Warning message box alerts the user and a label track, 
+      called "Dropouts", is added showing the lost parts, labeled with consecutive numbers.
+    * Improved horizontal zooming
+      For this release we have improved the way zooming using your mouse wheel 
+      works and provided a new Zoom Toggle function. 
+    * Improved vertical zooming
+      We have added a context menu to the vertical scale to control vertical zooming
+      Previous vertical zooming methods (left-click in the vertical ruler, left-drag
+      in the vertical ruler) remain available by selecting "Advanced Vertical Zooming"
+      in Track Behaviors Preferences.
+    * "Extra" menu
+      The "Ext-Bar" and "Ext-Command" menus have been consolidated into the "Extra" menu.
+    * Theme tweaks
+      The appearance and/or contrast of a few icons has been improved.
+    * Easier access to changing key bindings for shortcuts
+      For menu commands that are enabled (not grayed-out) if you hold the Shift key 
+      and click on the sub-menu item, instead of executing the command the Keyboard 
+      Preferences pop open at the chosen command. You can then change that (or any 
+      other) shortcut binding. 
+    * Language selection in Preferences
+      Interface Preferences has been upgraded so when selecting languages the proper
+      spelling of these languages is shown with accented and special characters. 
+
+Bug Fixes
+   * Multiple use of "Save As" to the existing open project can result in data 
+     corruption/loss
+   * Crash undoing during record, using Discard button of History window
+   * Exporting audio in compressed formats to device with insufficient space produces
+     inconsistent/truncated results
+   * In Export Multiple, Cancel does not remove the file that is in progress when 
+     Cancel is chosen
+   * Unicode page encodings fixed ( ͡° ͜ʖ ͡°)
+   * Crash using SBSMS pitch change at low sample rate
+   * (Mac) Equalization: "Telephone" curve displays a flat line, no sound on Preview
+   * Toolbars: open undocked if previously not shown, unless Reset Toolbars first
+   * Analysis effects that create labels should give focus to label track
+   * Control value may be out of range when using FloatingPointValidator
+   * Analysis effects produce false indication that a label is open for editing
+   * Import Uncompressed File Dialog Incorrect Reference to Menu Item
+   * Wave Color not grayed out in TCP dropdown menu when in Spectrogram view
+   * Hover indication on note track channel toggle appears on all tracks (when 
+     they rerender)
+   * Installer has old logo for 2.2.1 and 2.2.0
+   * Un-muting with a single track unnecessarily activates the Solo button
+   * Applying chain to file should zoom-to-fit
+
+
 Changes in version 2.2.1:
 
 Improvements
