French translation update

--- a/locale/fr.po
+++ b/locale/fr.po
@@ -19,7 +19,7 @@ msgstr ""
 "Project-Id-Version: Audacity\n"
 "Report-Msgid-Bugs-To: audacity-translation@lists.sourceforge.net\n"
 "POT-Creation-Date: 2018-08-31 22:53+0100\n"
-"PO-Revision-Date: 2018-09-01 01:15+0100\n"
+"PO-Revision-Date: 2018-09-25 16:18+0100\n"
 "Last-Translator: Olivier Humbert (trebmuh/olinuxx) <trebmuh@tuxfamily.org>\n"
 "Language-Team: French\n"
 "Language: fr\n"
@@ -2644,7 +2644,7 @@ msgid ""
 "More:</b> Visit our [[https://wiki.audacityteam.org/index.php|Wiki]] for "
 "tips, tricks, extra tutorials and effects plug-ins."
 msgstr ""
-"Davantage&nbsp;:</b> Visitez notre [[https://wiki.audacityteam.org/index.php|"
+"Davantage&nbsp;:</b> visitez notre [[https://wiki.audacityteam.org/index.php|"
 "Wiki (en anglais)]] pour des conseils, astuces, tutoriels et greffons "
 "d’effets supplémentaires."
 
